[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/objects/item.gd" type="Script" id=2]
[ext_resource path="res://assets/objects/CrateBarrel3.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 8, 46, 337, 332 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.754, 33.2151 )

[sub_resource type="CircleShape2D" id=3]
radius = 73.7827

[node name="WoodenBox" type="RigidBody2D" groups=[
"physical_object",
]]
position = Vector2( -4, 0 )
gravity_scale = 10.0
continuous_cd = 2
angular_velocity = 10.0
script = ExtResource( 2 )
has_inventory = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0752718, 0.0532727 )
scale = Vector2( 0.2, 0.2 )
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.214639 )
shape = SubResource( 3 )
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
